--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,14 @@
   position: absolute;
 }
 
+.align-center {
+  align-items: center;
+}
+
 
 body{
   background-color: #E0E0DD;
-  width: 90%;
-  max-width: 1400px;
-  min-width: 600px;
-  height: calc(100vh - 80px);
-  background-color: #EAEAEA;
-  margin: 0 auto;
+  transition: all 0,5s;
 
 }
 
@@ -36,17 +35,18 @@ body{
   background-color: #34A884;
   height: 120px;
   margin-bottom: -80px;
+  transition: all 0.5s;
 }
 
 .container{
   border-radius: 5px;
   margin: 0 auto;
   width: 90%;
-  max-width: 1200px;
-  min-width: 600px;
+  max-width: 1400px;
   height: calc(100vh - 80px);
   background-color: #EAEAEA;
   box-shadow: 0px 5px 10px #2a2a2a;
+  transition: all 0,5s;
 }
 
 .container aside{
@@ -64,6 +64,7 @@ body{
   justify-content: center;
   align-items: center;
   width: 50px;
+  min-width: 50px;
   height: 50px;
   margin: 0 10px;
 }
@@ -79,13 +80,11 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  border-radius: 5px;
-
+  border-radius: 5px; 
   background-color: #EAEAEA;
   height: 70px;
   width: 100%;
-
+  transition: all 0,5s;
   overflow: scroll;
 }
 
@@ -99,7 +98,6 @@ body{
   color: #B1B2B2;
   cursor: pointer;
   font-size: 20px;
-
   margin-right: 10px;
 }
 
@@ -111,6 +109,7 @@ body{
   background-color: #8EDAFC;
   height: 70px;
   overflow: scroll;
+  transition: all 0,5s;
 }
 
 .notifiche-plus{
@@ -122,11 +121,20 @@ body{
   margin: 0 10px;
   border-radius: 50px;
   background-color: #F5FCFF;
+  transition: all 0,5s;
+}
+
+.text-notifiche {
+  font-size: 13px;
+  color: #767676;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .notifiche-plus i{
   font-size: 20px;
   color: #8EDAFC;
+  transition: all 0,5s;
 }
 
 
@@ -137,7 +145,10 @@ body{
   height: 50px;
   overflow: scroll;
   padding: 10px;
+  transition: all 0,5s;
 }
+
+
 
 .input-form{
   display: flex;
@@ -146,6 +157,8 @@ body{
   height: 100%;
   border: 1px solid #D7D6D5;
   border-radius: 5px;
+  background-color: white;
+  transition: all 0,5s;
 
 }
 
@@ -153,6 +166,8 @@ body{
   width: 97%;
   border: none;
   border-radius: 5px;
+  transition: all 0.5s;
+  background-color: white;
 }
 
 .input-form input:focus{
@@ -160,20 +175,224 @@ body{
 }
 
 
-/* Chat */
+
 .user-container{
   background-color: white;
   height: calc(100% - 190px);
   overflow: scroll;
   cursor: pointer;
+  border-radius: 0 0 0 5px;
+  transition: all 0.5s;
 }
 
-.user-container .user-contact{
+.user-contact{
   background-color: white;
   border-top: 1px solid #D7D6D5;
   height: 70px;
   padding-top: 10px;
+  transition: all 0.5s;
 }
+
+.active{
+  background-color: #E9EBEB;
+  transition: all 0.5s;
+
+}
+
+.user-info{
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.orario-last-message{
+  position: absolute;
+  top: 7px;
+  right: 10px;
+  font-size: 12px;
+}
+
+
+/*
+  Colonna Messaggi
+*/
+
+.container section{
+  width: 60%;
+}
+
+
+.chat-container{
+  height: calc(100% - 140px);
+  border-top: 1px solid #D7D6D5;
+  border-bottom: 1px solid #D7D6D5;
+  background-image: url("../img/mine.jpg");
+  background-size: cover;
+  overflow: scroll;
+  transition: all 1s;
+
+}
+
+.message-mine-container{
+  display: flex;
+  justify-content: end;
+  position: relative;
+}
+
+.punta-verde{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.punta-verde img{
+  width: 60px;
+}
+
+.chevron-sent{
+  position: absolute;
+  top: 26px;
+  right: 40px;
+  z-index: 999;
+  font-size: 10px;
+  display: none;
+  cursor: pointer;
+}
+
+.message-mine-container:hover .chevron-sent{
+  display: block;
+  color: black;
+}
+
+
+/* mio */
+.message-mine{
+  position: relative;
+  margin-right: 30px;
+  margin-top: 20px;
+  background-color: #D5F9BA;
+  padding: 20px;
+  padding-bottom: 30px;
+  width: 40%;
+  border-radius: 10px;
+  transition: all 0.5s;
+  color: black;
+
+}
+
+.orario-messaggio-mio{
+  position: absolute;
+  bottom: 5px;
+  right: 10px;
+  font-size: 12px;
+}
+
+
+/* amico */
+.friend-message-container{
+  display: flex;
+  justify-content: start;
+  position: relative;
+}
+
+.punta-bianca{
+  position: absolute;
+  top: 15px;
+  left: 0;
+}
+
+.punta-bianca img{
+  width: 60px;
+}
+
+.chevron-received{
+  position: absolute;
+  top: 26px;
+  left: 40px;
+  z-index: 999;
+  font-size: 10px;
+  display: none;
+  cursor: pointer;
+}
+
+.friend-message-container:hover .chevron-received{
+  display: block;
+  color: black;
+}
+
+
+.friend-message{
+  position: relative;
+  margin-left: 30px;
+  margin-top: 20px;
+  background-color: white;
+  padding: 20px;
+  padding-bottom: 30px;
+  width: 40%;
+  border-radius: 10px;
+  transition: all 0.5s;
+  color: black;
+}
+
+.orario-messaggio-amico{
+  position: absolute;
+  bottom: 5px;
+  right: 10px;
+  font-size: 12px;
+}
+
+
+
+
+.write-message-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  height: 70px;
+}
+
+.write-message-container i {
+  color: #6B7375;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.input-write-message-container{
+  height: 70px;
+  overflow: scroll;
+  padding: 10px;
+  width: 90%;
+}
+
+.input-write-message{
+  display: flex;
+  justify-content: start;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  border: 1px solid #D7D6D5;
+  border-radius: 5px;
+  border: none;
+}
+
+.input-write-message input{
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  border: none;
+  padding-left: 10px;
+  border-radius: 5px;
+}
+
+.input-write-message input:focus{
+  outline: none;
+}
+
+
+
 
 
 
